# groth16-proofs

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
.cargo/: release.toml
.github/workflows/: ci.yml  release.yml
docs/: installation.md  release.md  usage.md  witness-formats.md
npm/: README.md  package.json.template
src/: circuit.rs  codec.rs  error.rs  field.rs  lib.rs  proof.rs  prover.rs  utils.rs  wasm.rs
src/wasm/: snarkjs_proof.rs
