[package]
name = "groth16-proofs"
version = "1.1.0"
edition = "2021"
license = "Apache-2.0 OR GPL-3.0-or-later"
description = "High-performance Groth16 proof generator using arkworks for Orbinum privacy protocol"
repository = "https://github.com/orbinum/groth16-proofs"
homepage = "https://github.com/orbinum/groth16-proofs"
authors = ["Orbinum"]
keywords = ["zk-snark", "groth16", "proof-generation", "arkworks", "privacy"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "generate-proof-from-witness"
path = "src/bin/generate-proof-from-witness.rs"

[dependencies]
# Arkworks dependencies
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-groth16 = "0.5.0"
ark-relations = "0.5.0"
ark-serialize = "0.5.0"
ark-snark = "0.5.0"
ark-std = "0.5.0"

# Utilities
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
num-bigint = "0.4"

# WASM support
wasm-bindgen = { version = "0.2", optional = true }
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = []
wasm = ["wasm-bindgen", "console_error_panic_hook"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
